--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fundamentos de NODEJS",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "NODEJS",
